syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
  rpc GetUser (UserRequest) returns (UserResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  int32 user_id = 2;
  string role = 3;
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}